<?xml version="1.0"?>
<package format="2">
  <name>reelrbtx_msgs</name>
  <version>0.0.1</version>
  <description>The reelrbtx_msgs package</description>

  <author email="pibgeus@gmail.com">Pablo Inigo Blasco</author>
  <maintainer email="pibgeus@gmail.com">Pablo Inigo Blasco</maintainer>

  <license>Proprietary Reel Robotics</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
